Fixed p tag spacing

--- a/css/main.css
+++ b/css/main.css
@@ -91,10 +91,6 @@ pre {
     margin: 0;
 }
 
-p {
-    margin: 0;
-}
-
 /* Code blocks */
 .org-keyword{
     color: #028090;
